tests/EnvironmentTests/data/NotAFuncTest.stderr.expect
./data/NotAFuncTest.xpl:4:3: error: identifier 'f' is not a function
./data/NotAFuncTest.xpl:error: input contains errors
