tests/EnvironmentTests/data/NotAFuncTest.xpl
node[] main() {
  integer f;

  f();
}
